--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.7.9",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
